Flowmini/flowmini_v23_token_tree_parser_bridge/examples/fail/bad_unreachable_after_break.flow
program bad_unreachable_after_break

main {
    zero : int(0)
    one  : int(1)

    while zero < one {
        break
        print zero
    }
}
